# sevens-smartcontracts

./: .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  check-program-id.sh  package-lock.json  validate-idl.sh
contracts/sevens-token/: Cargo.toml
contracts/sevens-token-management/: Cargo.toml
contracts/sevens-token-management/src/: lib.rs
contracts/sevens-token/src/: lib.rs
tests/: sevens-token-management.ts  sevens-token.ts
